M3 - add local worker
